add support for multiple units of extended memory